// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-ctDLux jCobKk"
  size="medium"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Loader renders with different colours 1`] = `
Array [
  <div
    className="sc-ctDLux jCobKk"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux ialRYs"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux bljVss"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux nDkII"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;

exports[`Loader renders with sizes 1`] = `
Array [
  <div
    className="sc-ctDLux GwlNF"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux jUVYyB"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux gllcyB"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux jCobKk"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ctDLux dcoRAY"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;
